...
                 app:drawableTopCompat="@drawable/ic_camera" />

            <TextView
                android:id="@+id/dialog_new_look_backpack"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/backpack"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_content_paste" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
...
